--- a/blog-one-news.html
+++ b/blog-one-news.html
@@ -372,5 +372,7 @@
 
 	<script type="text/javascript" src="js/fixed-bar.js"></script>
 
+	<script type="text/javascript" src="js/modals.js"></script>
+
 </body>
 </html>
