--- a/blog.html
+++ b/blog.html
@@ -455,5 +455,7 @@
 
 	<script type="text/javascript" src="js/fixed-bar.js"></script>
 
+	<script type="text/javascript" src="js/modals.js"></script>
+
 </body>
 </html>
