--- a/bonus.html
+++ b/bonus.html
@@ -319,5 +319,7 @@
 
 	<script type="text/javascript" src="js/fixed-bar.js"></script>
 
+	<script type="text/javascript" src="js/modals.js"></script>
+
 </body>
 </html>
