--- a/bonus.html
+++ b/bonus.html
@@ -54,7 +54,7 @@
 						</ul>
 					</li>
 
-					<li class="main-nav__item main-nav__item--hider"><a href="support.html">Поддержка</a></li>
+					<li class="main-nav__item main-nav__item--hider"><span id="menu-support">Поддержка</span></li>
 					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
 
@@ -74,102 +74,89 @@
 		</div>
 	</header>
 
-	<section class="games">
-		<div class="games__wrapper">
+	<div class="main-wrapper">
 
-			<div class="games__list-wrapper">
-				<div class="games__column">
-					<h2 class="games__header">Игры</h2>
-					<ul class="games__list">
-						<li class="games__item"><a href="#">Игры</a></li>
-						<li class="games__item"><a href="#">Слоты</a></li>
-						<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-						<li class="games__item"><a href="#">Настольные игры</a></li>
-						<li class="games__item"><a href="#">Рулетка</a></li>
-						<li class="games__item"><a href="#">Блэкджек</a></li>
-						<li class="games__item"><a href="#">Живое казино</a></li>
-					</ul>
+		<section class="games">
+			<div class="games__wrapper">
+
+				<div class="games__list-wrapper">
+					<div class="games__column">
+						<h2 class="games__header">Игры</h2>
+						<ul class="games__list">
+							<li class="games__item"><a href="#">Игры</a></li>
+							<li class="games__item"><a href="#">Слоты</a></li>
+							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
+							<li class="games__item"><a href="#">Настольные игры</a></li>
+							<li class="games__item"><a href="#">Рулетка</a></li>
+							<li class="games__item"><a href="#">Блэкджек</a></li>
+							<li class="games__item"><a href="#">Живое казино</a></li>
+						</ul>
+					</div>
+
+					<div class="games__column">
+						<h2 class="games__header">Игры</h2>
+						<ul class="games__list">
+							<li class="games__item"><a href="#">Игры</a></li>
+							<li class="games__item"><a href="#">Слоты</a></li>
+							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
+							<li class="games__item"><a href="#">Настольные игры</a></li>
+							<li class="games__item"><a href="#">Рулетка</a></li>
+							<li class="games__item"><a href="#">Блэкджек</a></li>
+							<li class="games__item"><a href="#">Живое казино</a></li>
+						</ul>
+					</div>
+
+					<div class="games__column">
+						<h2 class="games__header">Игры</h2>
+						<ul class="games__list">
+							<li class="games__item"><a href="#">Игры</a></li>
+							<li class="games__item"><a href="#">Слоты</a></li>
+							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
+							<li class="games__item"><a href="#">Настольные игры</a></li>
+							<li class="games__item"><a href="#">Рулетка</a></li>
+							<li class="games__item"><a href="#">Блэкджек</a></li>
+							<li class="games__item"><a href="#">Живое казино</a></li>
+						</ul>
+					</div>
+
+					<div class="games__column">
+						<h2 class="games__header">Игры</h2>
+						<ul class="games__list">
+							<li class="games__item"><a href="#">Игры</a></li>
+							<li class="games__item"><a href="#">Слоты</a></li>
+							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
+							<li class="games__item"><a href="#">Настольные игры</a></li>
+							<li class="games__item"><a href="#">Рулетка</a></li>
+							<li class="games__item"><a href="#">Блэкджек</a></li>
+							<li class="games__item"><a href="#">Живое казино</a></li>
+						</ul>
+					</div>
 				</div>
 
-				<div class="games__column">
-					<h2 class="games__header">Игры</h2>
-					<ul class="games__list">
-						<li class="games__item"><a href="#">Игры</a></li>
-						<li class="games__item"><a href="#">Слоты</a></li>
-						<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-						<li class="games__item"><a href="#">Настольные игры</a></li>
-						<li class="games__item"><a href="#">Рулетка</a></li>
-						<li class="games__item"><a href="#">Блэкджек</a></li>
-						<li class="games__item"><a href="#">Живое казино</a></li>
-					</ul>
-				</div>
-
-
-				<div class="games__column">
-					<h2 class="games__header">Игры</h2>
-					<ul class="games__list">
-						<li class="games__item"><a href="#">Игры</a></li>
-						<li class="games__item"><a href="#">Слоты</a></li>
-						<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-						<li class="games__item"><a href="#">Настольные игры</a></li>
-						<li class="games__item"><a href="#">Рулетка</a></li>
-						<li class="games__item"><a href="#">Блэкджек</a></li>
-						<li class="games__item"><a href="#">Живое казино</a></li>
-					</ul>
-				</div>
-
-
-				<div class="games__column">
-					<h2 class="games__header">Игры</h2>
-					<ul class="games__list">
-						<li class="games__item"><a href="#">Игры</a></li>
-						<li class="games__item"><a href="#">Слоты</a></li>
-						<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-						<li class="games__item"><a href="#">Настольные игры</a></li>
-						<li class="games__item"><a href="#">Рулетка</a></li>
-						<li class="games__item"><a href="#">Блэкджек</a></li>
-						<li class="games__item"><a href="#">Живое казино</a></li>
-					</ul>
+				<div class="games__social">
+					<span class="games__text">Следите за нами</span>
+					<div class="games__fake-social"></div>
 				</div>
 			</div>
+		</section>
 
-			<div class="games__social">
-				<span class="games__text">Следите за нами</span>
-				<div class="games__fake-social"></div>
-				<!-- <li class="games__social-item games__social-item--fb"></li>
-				<li class="games__social-item games__social-item--tw"></li>
-				<li class="games__social-item games__social-item--inst"></li>
-				<li class="games__social-item games__social-item--yt"></li> -->
+		<section class="partners">
+			<div class="partners__wrapper">
+				<img src="img/partners.png" alt="">
 			</div>
-		</div>
-	</section>
+		</section>
 
-	<section class="partners">
-		<div class="partners__wrapper">
-			<img src="img/partners.png" alt="">
-			<!-- <ul class="partners__list">
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-			</ul> -->
-		</div>
-	</section>
-
-	<footer class="footer">
-		<div class="footer__wrapper">
-			<div class="footer__copyright"></div>
-			<div class="footer__development">
-				<span class="footer__developer">Разработка сайта: </span> 
-				<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
+		<footer class="footer">
+			<div class="footer__wrapper">
+				<div class="footer__copyright"></div>
+				<div class="footer__development">
+					<span class="footer__developer">Разработка сайта: </span> 
+					<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
+				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
+
+	</div>
 
 	<div class="fixed-bar">
 		<div class="fixed-bar__wrapper">
@@ -257,6 +244,21 @@
 		</div>
 
 		<div class="modal-enter__close"></div>
+	</section>
+
+	<section class="modal-contact">
+		<div class="modal-contact__character-wrapper">
+			<img src="img/tiger.png" alt="tiger" class="modal-contact__character">
+		</div>
+
+		<form action="#" class="contact-form">
+			<h2 class="contact-form__header">Форма контакта</h2>
+			<input type="email" class="contact-form__email" placeholder="Email">
+			<textarea name="textarea-contact" id="text-contact" cols="30" rows="10" class="contact-form__text-field" placeholder="Текст..."></textarea>
+			<input type="submit" class="contact-form__button" value="Отправить">
+		</form>
+
+		<div class="modal-contact__close"></div>
 	</section>
 
 	<div class="modal-bg"></div> 
