--- a/partners.html
+++ b/partners.html
@@ -54,7 +54,7 @@
 						</ul>
 					</li>
 
-					<li class="main-nav__item main-nav__item--hider"><a href="support.html">Поддержка</a></li>
+					<li class="main-nav__item main-nav__item--hider"><span id="menu-support">Поддержка</span></li>
 					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
 
@@ -73,181 +73,168 @@
 			</div>
 		</div>
 	</header>
-	
-	<section class="partner-bg">
-		<section class="partner">
-			<div class="partner__wrapper">
-				<div class="partner__text-wrapper">
-					<p class="partner__text">Стань партнером и получай до <span>45% от дохода</span> приведенного игрока уже через месяц с помощью нашей уникальной программы</p>
-					<button class="partner__button">Узнать больше</button>
+
+	<div class="main-wrapper">
+		
+		<section class="partner-bg">
+			<section class="partner">
+				<div class="partner__wrapper">
+					<div class="partner__text-wrapper">
+						<p class="partner__text">Стань партнером и получай до <span>45% от дохода</span> приведенного игрока уже через месяц с помощью нашей уникальной программы</p>
+						<button class="partner__button">Узнать больше</button>
+					</div>
+
+					<div class="partner__image-wrapper">
+						<img src="img/chest.png" alt="" class="partner__image">
+					</div>
+				</div>
+			</section>
+
+			<section class="advantages">
+				<div class="advantages__wrapper">
+
+					<h2 class="advantages__header">Lorem ipsum Lorem ipsum</h2>
+
+					<div class="advantage advantage--ads">
+						<div class="advantage__image"></div>
+						<h2 class="advantage__header">Реклама</h2>
+						<p class="advantage__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+					</div>
+
+					<div class="advantage advantage--support">
+						<div class="advantage__image"></div>
+						<h2 class="advantage__header">Поддержка</h2>
+						<p class="advantage__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+					</div>
+
+					<div class="advantage advantage--rewards">
+						<div class="advantage__image"></div>
+						<h2 class="advantage__header">Вознаграждения</h2>
+						<p class="advantage__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+					</div>
+				</div>
+			</section>
+		</section>
+
+		<section class="incomes">
+			<div class="incomes__wrapper">
+				<h2 class="incomes__header">Доход до 45%</h2>
+				<h3 class="incomes__underheader">+ до 1000$ сверху за каждый уровень</h3>
+
+				<div class="income income--first">
+					<div class="income__wrapper">
+						<h3 class="income__header">1 уровень</h3>
+						<p class="income__text">30% от дохода до 4000$</p>
+					</div>
 				</div>
 
-				<div class="partner__image-wrapper">
-					<img src="img/chest.png" alt="" class="partner__image">
+				<div class="income income--second">
+					<div class="income__wrapper">
+						<h3 class="income__header">2 уровень</h3>
+						<p class="income__text"> 35% от суммы дохода с 4000$ до 10000$ (или эквивалент этой суммы) + 500$ за уровень</p>
+					</div>
+				</div>
+
+				<div class="income income--third">
+					<div class="income__wrapper">
+						<h3 class="income__header">VIP уровень</h3>
+						<p class="income__text">45% от суммы дохода с 10 000$  и выше .. + 1000$</p>
+					</div>
 				</div>
 			</div>
 		</section>
 
-		<section class="advantages">
-			<div class="advantages__wrapper">
+		<section class="prize">
+			<div class="prize__wrapper">
+				<h2 class="prize__header">И это еще не все</h2>
+				<span class="prize__back-text">#фортуна</span>
+				<p class="prize__text">Так же между партнерами случайным образом мы розыграем 5000$!</p>
+				<p class="prize__undertext">*В Акции принимают участие все партнеры достигшие 2-го и выше уровня по итогам месяца.</p>
+				<button class="prize__button">Узнать больше</button>
+			</div>
+		</section>
 
-				<h2 class="advantages__header">Lorem ipsum Lorem ipsum</h2>
+		<section class="games">
+			<div class="games__wrapper">
 
-				<div class="advantage advantage--ads">
-					<div class="advantage__image"></div>
-					<h2 class="advantage__header">Реклама</h2>
-					<p class="advantage__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+				<div class="games__list-wrapper">
+					<div class="games__column">
+						<h2 class="games__header">Игры</h2>
+						<ul class="games__list">
+							<li class="games__item"><a href="#">Игры</a></li>
+							<li class="games__item"><a href="#">Слоты</a></li>
+							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
+							<li class="games__item"><a href="#">Настольные игры</a></li>
+							<li class="games__item"><a href="#">Рулетка</a></li>
+							<li class="games__item"><a href="#">Блэкджек</a></li>
+							<li class="games__item"><a href="#">Живое казино</a></li>
+						</ul>
+					</div>
+
+					<div class="games__column">
+						<h2 class="games__header">Игры</h2>
+						<ul class="games__list">
+							<li class="games__item"><a href="#">Игры</a></li>
+							<li class="games__item"><a href="#">Слоты</a></li>
+							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
+							<li class="games__item"><a href="#">Настольные игры</a></li>
+							<li class="games__item"><a href="#">Рулетка</a></li>
+							<li class="games__item"><a href="#">Блэкджек</a></li>
+							<li class="games__item"><a href="#">Живое казино</a></li>
+						</ul>
+					</div>
+
+					<div class="games__column">
+						<h2 class="games__header">Игры</h2>
+						<ul class="games__list">
+							<li class="games__item"><a href="#">Игры</a></li>
+							<li class="games__item"><a href="#">Слоты</a></li>
+							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
+							<li class="games__item"><a href="#">Настольные игры</a></li>
+							<li class="games__item"><a href="#">Рулетка</a></li>
+							<li class="games__item"><a href="#">Блэкджек</a></li>
+							<li class="games__item"><a href="#">Живое казино</a></li>
+						</ul>
+					</div>
+
+					<div class="games__column">
+						<h2 class="games__header">Игры</h2>
+						<ul class="games__list">
+							<li class="games__item"><a href="#">Игры</a></li>
+							<li class="games__item"><a href="#">Слоты</a></li>
+							<li class="games__item"><a href="#">Игры с джекпотом</a></li>
+							<li class="games__item"><a href="#">Настольные игры</a></li>
+							<li class="games__item"><a href="#">Рулетка</a></li>
+							<li class="games__item"><a href="#">Блэкджек</a></li>
+							<li class="games__item"><a href="#">Живое казино</a></li>
+						</ul>
+					</div>
 				</div>
 
-				<div class="advantage advantage--support">
-					<div class="advantage__image"></div>
-					<h2 class="advantage__header">Поддержка</h2>
-					<p class="advantage__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-				</div>
-
-				<div class="advantage advantage--rewards">
-					<div class="advantage__image"></div>
-					<h2 class="advantage__header">Вознаграждения</h2>
-					<p class="advantage__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+				<div class="games__social">
+					<span class="games__text">Следите за нами</span>
+					<div class="games__fake-social"></div>
 				</div>
 			</div>
 		</section>
-	</section>
 
-	<section class="incomes">
-		<div class="incomes__wrapper">
-			<h2 class="incomes__header">Доход до 45%</h2>
-			<h3 class="incomes__underheader">+ до 1000$ сверху за каждый уровень</h3>
+		<section class="partners">
+			<div class="partners__wrapper">
+				<img src="img/partners.png" alt="">
+			</div>
+		</section>
 
-			<div class="income income--first">
-				<div class="income__wrapper">
-					<h3 class="income__header">1 уровень</h3>
-					<p class="income__text">30% от дохода до 4000$</p>
+		<footer class="footer">
+			<div class="footer__wrapper">
+				<div class="footer__copyright"></div>
+				<div class="footer__development">
+					<span class="footer__developer">Разработка сайта: </span> 
+					<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
 				</div>
 			</div>
+		</footer>
 
-			<div class="income income--second">
-				<div class="income__wrapper">
-					<h3 class="income__header">2 уровень</h3>
-					<p class="income__text"> 35% от суммы дохода с 4000$ до 10000$ (или эквивалент этой суммы) + 500$ за уровень</p>
-				</div>
-			</div>
-
-			<div class="income income--third">
-				<div class="income__wrapper">
-					<h3 class="income__header">VIP уровень</h3>
-					<p class="income__text">45% от суммы дохода с 10 000$  и выше .. + 1000$</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="prize">
-		<div class="prize__wrapper">
-			<h2 class="prize__header">И это еще не все</h2>
-			<span class="prize__back-text">#фортуна</span>
-			<p class="prize__text">Так же между партнерами случайным образом мы розыграем 5000$!</p>
-			<p class="prize__undertext">*В Акции принимают участие все партнеры достигшие 2-го и выше уровня по итогам месяца.</p>
-			<button class="prize__button">Узнать больше</button>
-		</div>
-	</section>
-
-	<section class="games">
-		<div class="games__wrapper">
-
-			<div class="games__list-wrapper">
-				<div class="games__column">
-					<h2 class="games__header">Игры</h2>
-					<ul class="games__list">
-						<li class="games__item"><a href="#">Игры</a></li>
-						<li class="games__item"><a href="#">Слоты</a></li>
-						<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-						<li class="games__item"><a href="#">Настольные игры</a></li>
-						<li class="games__item"><a href="#">Рулетка</a></li>
-						<li class="games__item"><a href="#">Блэкджек</a></li>
-						<li class="games__item"><a href="#">Живое казино</a></li>
-					</ul>
-				</div>
-
-				<div class="games__column">
-					<h2 class="games__header">Игры</h2>
-					<ul class="games__list">
-						<li class="games__item"><a href="#">Игры</a></li>
-						<li class="games__item"><a href="#">Слоты</a></li>
-						<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-						<li class="games__item"><a href="#">Настольные игры</a></li>
-						<li class="games__item"><a href="#">Рулетка</a></li>
-						<li class="games__item"><a href="#">Блэкджек</a></li>
-						<li class="games__item"><a href="#">Живое казино</a></li>
-					</ul>
-				</div>
-
-
-				<div class="games__column">
-					<h2 class="games__header">Игры</h2>
-					<ul class="games__list">
-						<li class="games__item"><a href="#">Игры</a></li>
-						<li class="games__item"><a href="#">Слоты</a></li>
-						<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-						<li class="games__item"><a href="#">Настольные игры</a></li>
-						<li class="games__item"><a href="#">Рулетка</a></li>
-						<li class="games__item"><a href="#">Блэкджек</a></li>
-						<li class="games__item"><a href="#">Живое казино</a></li>
-					</ul>
-				</div>
-
-
-				<div class="games__column">
-					<h2 class="games__header">Игры</h2>
-					<ul class="games__list">
-						<li class="games__item"><a href="#">Игры</a></li>
-						<li class="games__item"><a href="#">Слоты</a></li>
-						<li class="games__item"><a href="#">Игры с джекпотом</a></li>
-						<li class="games__item"><a href="#">Настольные игры</a></li>
-						<li class="games__item"><a href="#">Рулетка</a></li>
-						<li class="games__item"><a href="#">Блэкджек</a></li>
-						<li class="games__item"><a href="#">Живое казино</a></li>
-					</ul>
-				</div>
-			</div>
-
-			<div class="games__social">
-				<span class="games__text">Следите за нами</span>
-				<div class="games__fake-social"></div>
-				<!-- <li class="games__social-item games__social-item--fb"></li>
-				<li class="games__social-item games__social-item--tw"></li>
-				<li class="games__social-item games__social-item--inst"></li>
-				<li class="games__social-item games__social-item--yt"></li> -->
-			</div>
-		</div>
-	</section>
-
-	<section class="partners">
-		<div class="partners__wrapper">
-			<img src="img/partners.png" alt="">
-			<!-- <ul class="partners__list">
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-				<li class="partners__item">VISA</li>
-			</ul> -->
-		</div>
-	</section>
-
-	<footer class="footer">
-		<div class="footer__wrapper">
-			<div class="footer__copyright"></div>
-			<div class="footer__development">
-				<span class="footer__developer">Разработка сайта: </span> 
-				<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
-			</div>
-		</div>
-	</footer>
+	</div>
 
 	<div class="fixed-bar">
 		<div class="fixed-bar__wrapper">
@@ -335,6 +322,21 @@
 		</div>
 
 		<div class="modal-enter__close"></div>
+	</section>
+
+	<section class="modal-contact">
+		<div class="modal-contact__character-wrapper">
+			<img src="img/tiger.png" alt="tiger" class="modal-contact__character">
+		</div>
+
+		<form action="#" class="contact-form">
+			<h2 class="contact-form__header">Форма контакта</h2>
+			<input type="email" class="contact-form__email" placeholder="Email">
+			<textarea name="textarea-contact" id="text-contact" cols="30" rows="10" class="contact-form__text-field" placeholder="Текст..."></textarea>
+			<input type="submit" class="contact-form__button" value="Отправить">
+		</form>
+
+		<div class="modal-contact__close"></div>
 	</section>
 
 	<div class="modal-bg"></div> 
