preloader on index fix

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
 	<div class="modal-bg"></div> 
 
-	<!-- <div id="preloader"></div> -->
+	<div id="preloader"></div>
 
 	<script type="text/javascript">
 		var preloader = document.getElementById("preloader");
