--- a/bonus.html
+++ b/bonus.html
@@ -37,7 +37,7 @@
 				<ul class="main-nav__list">
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--first hidden">
+						<ul class="main-nav__dropdown main-nav__dropdown--first">
 							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Amatic</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Ezugi</a></li>
@@ -47,8 +47,8 @@
 
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--second"><span>Акции</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--second hidden">
-							<li class="main-nav__dropdown-item"><a href="#">Акция 1</a></li>
+						<ul class="main-nav__dropdown main-nav__dropdown--second">
+							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Акция 2</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Акция 3</a></li>
 						</ul>
@@ -58,7 +58,7 @@
 					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--fifth hidden">
+						<ul class="main-nav__dropdown main-nav__dropdown--fifth">
 							<li class="main-nav__dropdown-item"><a href="#">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 						</ul>
@@ -75,6 +75,76 @@
 	</header>
 
 	<div class="main-wrapper">
+
+		<section class="greeting-bonus">
+			<div class="greeting-bonus__wrapper">
+
+				<h2 class="greeting-bonus__header">Приветственный бонус</h2>
+				<span class="greeting-bonus__count">90000 руб</span>
+
+				<div class="deposit">
+					<span class="deposit__percents">100%</span>
+					<span class="deposit__number">Первый депозит</span>
+				</div>
+
+				<div class="deposit">
+					<span class="deposit__percents">50%</span>
+					<span class="deposit__number">Второй депозит</span>
+				</div>
+
+				<div class="deposit">
+					<span class="deposit__percents">200%</span>
+					<span class="deposit__number">Третий депозит</span>
+				</div>
+
+				<button class="greeting-bonus__button">Призыв к действию</button>
+
+				<div class="deposit-uslovie">
+					<span class="deposit-uslovie__count">500 руб</span>
+					<span class="deposit-uslovie__description">Минимальный депозит</span>
+				</div>
+
+				<div class="deposit-uslovie">
+					<span class="deposit-uslovie__count">35 000 руб</span>
+					<span class="deposit-uslovie__description">Максимальный размер бонуса</span>
+				</div>
+
+				<div class="deposit-uslovie">
+					<span class="deposit-uslovie__description">Минимальный депозит</span>
+				</div>
+			</div>
+		</section>
+
+		<section class="cashback">
+			<div class="cashback__wrapper">
+
+				<h2 class="cashback__header">Акция 100% кэшбек</h2>
+				<span class="cashback__text">Для каждого игрока достигшего <span>2-го и выше уровня</span></span>
+				
+			</div>
+		</section>
+
+		<section class="bonus-more">
+			<div class="bonus-more__wrapper">
+
+				<div class="deposit-uslovie">
+					<span class="deposit-uslovie__description">Отыгрывать бонус можно только в слотах.</span>
+				</div>
+
+				<div class="deposit-uslovie">
+					<span class="deposit-uslovie__description">Максимальная ставка при это не должна превышать 5$(300р.)</span>
+				</div>
+
+				<div class="deposit-uslovie">
+					<span class="deposit-uslovie__description">Требования по отыгрышу бонусов(вейджер) х40</span>
+				</div>
+
+				<p class="bonus-more__text">Так же к этому предложению действуют стандартные положения и условия </p>
+
+				<button class="bonus-more__button">Узнать больше</button>
+
+			</div>			
+		</section>
 
 		<section class="games">
 			<div class="games__wrapper">
@@ -263,7 +333,7 @@
 
 	<div class="modal-bg"></div> 
 
-	<div id="preloader"></div>
+	<!-- <div id="preloader"></div> -->
 
 	<script type="text/javascript">
 		var preloader = document.getElementById("preloader");
