--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--second"><span>Акции</span>
 
 						<ul class="main-nav__dropdown main-nav__dropdown--second">
-							<li class="main-nav__dropdown-item"><a href="#">Акция 1</a></li>
+							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Акция 2</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Акция 3</a></li>
 						</ul>
@@ -549,7 +549,7 @@
 
 	<div class="modal-bg"></div> 
 
-	<!-- <div id="preloader"></div> -->
+	<div id="preloader"></div>
 
 	<script type="text/javascript">
 		var preloader = document.getElementById("preloader");
