--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
 				<ul class="main-nav__list">
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--first hidden">
+						<ul class="main-nav__dropdown main-nav__dropdown--first">
 							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Amatic</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Ezugi</a></li>
@@ -47,8 +47,8 @@
 
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--second"><span>Акции</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--second hidden">
-							<li class="main-nav__dropdown-item"><a href="#">Акция 1</a></li>
+						<ul class="main-nav__dropdown main-nav__dropdown--second">
+							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Акция 2</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Акция 3</a></li>
 						</ul>
@@ -58,7 +58,7 @@
 					<li class="main-nav__item main-nav__item--hider"><a href="partners.html">Партнёрам</a></li>
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--fifth"><span>О нас</span>
 
-						<ul class="main-nav__dropdown main-nav__dropdown--fifth hidden">
+						<ul class="main-nav__dropdown main-nav__dropdown--fifth">
 							<li class="main-nav__dropdown-item"><a href="#">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 						</ul>
