mobile menu fix

--- a/bonus.html
+++ b/bonus.html
@@ -99,17 +99,17 @@
 
 				<button class="greeting-bonus__button">Призыв к действию</button>
 
-				<div class="deposit-uslovie">
+				<div class="deposit-condition">
 					<span class="deposit-uslovie__count">500 руб</span>
 					<span class="deposit-uslovie__description">Минимальный депозит</span>
 				</div>
 
-				<div class="deposit-uslovie">
+				<div class="deposit-condition">
 					<span class="deposit-uslovie__count">35 000 руб</span>
 					<span class="deposit-uslovie__description">Максимальный размер бонуса</span>
 				</div>
 
-				<div class="deposit-uslovie">
+				<div class="deposit-condition">
 					<span class="deposit-uslovie__description">Минимальный депозит</span>
 				</div>
 			</div>
@@ -127,15 +127,15 @@
 		<section class="bonus-more">
 			<div class="bonus-more__wrapper">
 
-				<div class="deposit-uslovie">
+				<div class="deposit-condition">
 					<span class="deposit-uslovie__description">Отыгрывать бонус можно только в слотах.</span>
 				</div>
 
-				<div class="deposit-uslovie">
+				<div class="deposit-condition">
 					<span class="deposit-uslovie__description">Максимальная ставка при это не должна превышать 5$(300р.)</span>
 				</div>
 
-				<div class="deposit-uslovie">
+				<div class="deposit-condition">
 					<span class="deposit-uslovie__description">Требования по отыгрышу бонусов(вейджер) х40</span>
 				</div>
 
