greeting bonus and another menu changes.......

--- a/blog.html
+++ b/blog.html
@@ -333,34 +333,34 @@
 		</div>
 
 		<section class="modal-registration">
-			<div class="modal-registration__character-wrapper">
-				<img src="img/rat.png" alt="" class="modal-registration__character">
+		<div class="modal-registration__character-wrapper">
+			<img src="img/rat.png" alt="rat" class="modal-registration__character">
+		</div>
+
+		<form action="#" class="registration-form">
+			<h2 class="registration-form__header">Регистрация</h2>
+			<input type="email" name="email" placeholder="Email" class="registration-form__name">
+			<input type="text" name="nickname" placeholder="Никнейм" class="registration-form__nickname">
+			<input type="password" name="password" placeholder="Пароль" class="registration-form__password">
+			<select name="currency" id="currency" class="registration-form__currency">
+				<option value="Валюта" selected disabled>Валюта</option>
+				<option value="$">$</option>
+				<option value="$$">$$</option>
+				<option value="$$$">$$$</option>
+			</select>
+			<input type="password" name="password-confirm" placeholder="Подтверждение пароля" class="registration-form__password-confirm">
+			<input type="text" name="code" placeholder="Бонусный код" class="registration-form__code">
+
+			<div class="registration-form__checkbox-wrapper">
+				<input type="checkbox" id="reg-checkbox" class="registration-form__checkbox">
+				<label for="reg-checkbox" class="registration-form__label-checkbox">Мне есть 18 лет и я принимаю Положения и условия</label>
 			</div>
 
-			<form action="#" class="registration-form">
-				<h2 class="registration-form__header">Регистрация</h2>
-				<input type="email" name="email" placeholder="Email" class="registration-form__name">
-				<input type="text" name="surname" placeholder="Фамилия" class="registration-form__surname">
-				<input type="password" name="password" placeholder="Пароль" class="registration-form__password">
-				<select name="currency" id="currency" class="registration-form__currency">
-					<option value="Валюта" selected disabled>Валюта</option>
-					<option value="$">$</option>
-					<option value="$$">$$</option>
-					<option value="$$$">$$$</option>
-				</select>
-				<input type="password" name="password-confirm" placeholder="Подтверждение пароля" class="registration-form__password-confirm">
-				<input type="text" name="code" placeholder="Бонусный код" class="registration-form__code">
+			<input type="submit" value="Регистрация" class="registration-form__button">
+		</form>
 
-				<div class="registration-form__checkbox-wrapper">
-					<input type="checkbox" id="reg-checkbox" class="registration-form__checkbox">
-					<label for="reg-checkbox" class="registration-form__label-checkbox">Мне есть 18 лет и я принимаю Положения и условия</label>
-				</div>
-
-				<input type="submit" value="Регистрация" class="registration-form__button">
-			</form>
-
-			<div class="modal-registration__close"></div>
-		</section>
+		<div class="modal-registration__close"></div>
+	</section>
 
 		<section class="modal-enter">
 			<div class="modal-enter__character-wrapper">
