--- a/partners.html
+++ b/partners.html
@@ -275,13 +275,13 @@
 
 	<section class="modal-registration">
 		<div class="modal-registration__character-wrapper">
-			<img src="img/rat.png" alt="" class="modal-registration__character">
+			<img src="img/rat.png" alt="rat" class="modal-registration__character">
 		</div>
 
 		<form action="#" class="registration-form">
 			<h2 class="registration-form__header">Регистрация</h2>
 			<input type="email" name="email" placeholder="Email" class="registration-form__name">
-			<input type="text" name="surname" placeholder="Фамилия" class="registration-form__surname">
+			<input type="text" name="nickname" placeholder="Никнейм" class="registration-form__nickname">
 			<input type="password" name="password" placeholder="Пароль" class="registration-form__password">
 			<select name="currency" id="currency" class="registration-form__currency">
 				<option value="Валюта" selected disabled>Валюта</option>
