--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="main-nav__search-close"></div>
 
 				<ul class="main-nav__list">
-					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
+					<li class="main-nav__item main-nav__item--arrow main-nav__item--first main-nav__dropdown--active"><span>Игры</span>
 
 						<ul class="main-nav__dropdown main-nav__dropdown--first">
 							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
